// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`workspace view rendering states > then renders default workspace with changes list 1`] = `
[
  "[38;2;76;62;118m╭[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m[38;2;250;208;0m Workspaces[0m                      [39m[39m[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Changes[0m                                                                            [39m[39m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m default [0m                        [38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1mfeat: add login[22m[39m                                                                     [49m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39mfix: typo[0m                                                                           [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: abc[0m                                                                          [39m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  diff --git a/src/login.ts b/src/login.ts[0m                                          [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  +export function Login() {}[0m                                                       [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`workspace view rendering states > then renders default workspace with second change selected 1`] = `
[
  "[38;2;76;62;118m╭[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m[38;2;250;208;0m Workspaces[0m                      [39m[39m[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Changes[0m                                                                            [39m[39m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m default [0m                        [38;2;250;208;0m│[39mfeat: add login[0m                                                                     [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1mfix: typo[22m[39m                                                                           [49m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: def[0m                                                                          [39m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  diff --git a/src/typo.ts b/src/typo.ts[0m                                            [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  -tyo[0m                                                                              [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  +typo[0m                                                                             [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`workspace view rendering states > then renders empty workspace list 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Workspaces[0m                      [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Files[0m                                                                              [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m No workspaces[0m                   [38;2;250;208;0m│[39m[38;2;76;62;118m No files changed[39m[0m                                                                   [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[38;2;76;62;118m Use /workspace <task>[39m[0m           [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff[0m                                                                               [39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  No workspaces found[0m                                                               [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`workspace view rendering states > then renders error message in diff pane 1`] = `
[
  "[38;2;76;62;118m╭[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m[38;2;250;208;0m Workspaces[0m                      [39m[39m[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Files[0m                                                                              [39m[39m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m ws-a [0m                           [38;2;250;208;0m│[39m[38;2;76;62;118m No files changed[39m[0m                                                                   [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: all[0m                                                                          [39m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  Error: Failed to get diff: no such revision[0m                                       [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`workspace view rendering states > then renders loading state with focused left panel 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Workspaces[0m                      [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Files[0m                                                                              [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m Loading...[0m                      [38;2;250;208;0m│[39m[38;2;76;62;118m No files changed[39m[0m                                                                   [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: all[0m                                                                          [39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  Loading...[0m                                                                        [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`workspace view rendering states > then renders no content when diff is empty 1`] = `
[
  "[38;2;76;62;118m╭[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m[38;2;250;208;0m Workspaces[0m                      [39m[39m[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Changes[0m                                                                            [39m[39m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m default [0m                        [38;2;250;208;0m│[39m[38;2;76;62;118m No changes[39m[0m                                                                         [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: none[0m                                                                         [39m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;76;62;118m No content[39m[0m                                                                         [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`workspace view rendering states > then renders scrolled diff content 1`] = `
[
  "[38;2;76;62;118m╭[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m[38;2;250;208;0m Workspaces[0m                      [39m[39m[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Files[0m                                                                              [39m[39m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m ws-a [0m                           [38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;49;120;198m󰛦[39m [38;2;250;208;0msrc/main.ts[39m                                                                   [38;2;250;208;0m󰏫 3[39m [49m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: src/main.ts[0m                                                                  [39m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  line 3 - visible after scroll[0m                                                     [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  line 4 - also visible[0m                                                             [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  line 5 - and this one[0m                                                             [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`workspace view rendering states > then renders selected workspace with file list and diff 1`] = `
[
  "[38;2;76;62;118m╭[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m[38;2;250;208;0m Workspaces[0m                      [39m[39m[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Files[0m                                                                              [39m[39m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m default [0m                        [38;2;250;208;0m│[39m[38;2;49;120;198m󰛦[39m [38;2;165;255;144msrc/new.ts[39m                                                                   [38;2;165;255;144m󰐕 10[39m [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m ws-a [0m                           [38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;49;120;198m󰛦[39m [38;2;250;208;0msrc/main.ts[39m                                                                   [38;2;250;208;0m󰏫 3[39m [49m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: src/main.ts[0m                                                                  [39m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  diff --git a/src/main.ts b/src/main.ts[0m                                            [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  index abc..def 100644[0m                                                             [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  --- a/src/main.ts[0m                                                                 [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  +++ b/src/main.ts[0m                                                                 [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  @@ -1 +1 @@@[0m                                                                      [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  -old line[0m                                                                         [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  +new line[0m                                                                         [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`workspace view rendering states > then renders workspace list with focused right panel 1`] = `
[
  "[38;2;76;62;118m╭[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m[38;2;250;208;0m Workspaces[0m                      [39m[39m[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Files[0m                                                                              [39m[39m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m ws-a [0m                           [38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;49;120;198m󰛦[39m [38;2;250;208;0msrc/main.ts[39m                                                                   [38;2;250;208;0m󰏫 3[39m [49m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m ws-b  (running)[0m                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: src/main.ts[0m                                                                  [39m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  diff content[0m                                                                      [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`workspace view rendering states > then renders workspace with multiple files and second file selected 1`] = `
[
  "[38;2;76;62;118m╭[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m[38;2;250;208;0m Workspaces[0m                      [39m[39m[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Files[0m                                                                              [39m[39m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m ws-a [0m                           [38;2;250;208;0m│[39m[38;2;49;120;198m󰛦[39m [38;2;165;255;144msrc/new.ts[39m                                                                   [38;2;165;255;144m󰐕 10[39m [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;49;120;198m󰛦[39m [38;2;250;208;0msrc/main.ts[39m                                                                   [38;2;250;208;0m󰏫 3[39m [49m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;49;120;198m󰛦[39m [38;2;255;98;140msrc/old.ts[39m                                                                    [38;2;255;98;140m󰍴 8[39m [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: src/main.ts[0m                                                                  [39m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  diff --git a/src/main.ts b/src/main.ts[0m                                            [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  -old[0m                                                                              [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m  +new[0m                                                                              [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`workspace view rendering states > then renders workspace with no changed files 1`] = `
[
  "[38;2;76;62;118m╭[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m[38;2;250;208;0m Workspaces[0m                      [39m[39m[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Files[0m                                                                              [39m[39m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m ws-a [0m                           [38;2;250;208;0m│[39m[38;2;76;62;118m No files changed[39m[0m                                                                   [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: all[0m                                                                          [39m[38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;76;62;118m No content[39m[0m                                                                         [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;250;208;0m│[39m",
  "[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;
